<resources>
    <string name="app_name">Foodinn</string>
    <string name="no_data">暂无数据</string>
    <string name="refresh_hint">您可以点击刷新试试</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="hint_no_content">已经没有内容了</string>
    <string name="permission_denied">权限拒绝</string>
    <string name="confirm">确定加入</string>
    <string name="select_quantity">选择数量</string>
    <string name="add_new_address">新增收获地址</string>
    <string name="withdrawal_amount">提现金额</string>
    <string name="full_withdrawal">全部提现</string>
    <string name="confirm_withdrawal">确认提现</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="get_more_benefits">绑定手机号，第一时间领取更多福利</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="send_code">重新发送</string>
    <string name="enter_code">请输入短信验证码</string>
    <string name="next_step">下一步</string>
    <string name="confirm_buy">确认购买</string>
    <string name="update_members_sales">升级会员，可获取返利</string>
    <string name="pay">结算</string>
    <string name="todos">全选</string>
    <string name="benefit">返利：€ 0</string>
    <string name="total">合计：€ 0.00</string>
    <string name="category">分类</string>
    <string name="profile">我的</string>
    <string name="complete">完成</string>
    <string name="enter_name_plase">请输入姓名</string>
    <string name="send_evaluate">发表评价</string>
    <string name="hint_advantages_disadvantages">说说它的优点或者不足的地方吧～</string>
    <string name="coupon_with_value">代金券：€ 0</string>
    <string name="use">使用</string>
    <string name="seller_message">卖家留言</string>
    <string name="message">编辑文本</string>
    <string name="reciver">收件人</string>
    <string name="phone_number">电话号码</string>
    <string name="province">省份</string>
    <string name="hint_city">城市</string>
    <string name="hint_street">街道</string>
    <string name="default_address">设置为默认地址</string>
    <string name="save_address">保存收货地址</string>
    <string name="top_categories">= 热门分类 =</string>
    <string name="hot_sales">= 热销单品 =</string>
    <string name="new_season">= 当季新品 =</string>
    <string name="comment">用户评价</string>
    <string name="product_detail">商品详情</string>
    <string name="view_all">查看全部</string>
    <string name="cart">购物车</string>
    <string name="add">添加</string>
    <string name="login_title">手机号登录</string>
    <string name="not_register_sistem_automatically">您还未注册账号，系统会帮您自动注册账号</string>
    <string name="登录即表示您同意_1">登录即表示您同意</string>
    <string name="登录即表示您同意_2">《会员注册协议》</string>
    <string name="ok">确定</string>
    <string name="home">首页</string>
    <string name="limited_time_offer">今日限时抢购</string>
    <string name="soon"><![CDATA[下一场预告 >]]></string>
    <string name="login_register">登录／注册</string>
    <string name="my_order">Mis Pedidos</string>
    <string name="my_coupon">我的账户优惠券</string>
    <string name="my_accounts">我的帐户</string>
    <string name="coupon">代金券</string>
    <string name="Essential_tools">必备工具</string>
    <string name="help_center">帮助中心</string>
    <string name="invite_friends">邀请好友</string>
    <string name="personal_settings">个人设置</string>
    <string name="Feedback">意见反馈</string>
    <string name="account_balance">账户余额(€)</string>
    <string name="withdraw_cash">我要提现</string>
    <string name="details_account">账户明细</string>
    <string name="edit_message">编辑留言~</string>
    <string name="rebate">返利：</string>
    <string name="deposit_money_count">请将款项汇入以下账号</string>
    <string name="confirm_payment">确认支付</string>
    <string name="hint_enter_title">请输入标题</string>
    <string name="hint_enter_comment">请输入您的反馈意见～</string>
    <string name="send_comment">提交意见</string>
    <string name="amount_product">商品金额</string>
    <string name="order_number">订单编号：</string>
    <string name="copy">复制</string>
    <string name="payment_method_credit_card">支付方式：信用卡</string>
    <string name="total_payment">总计需支付</string>
    <string name="amounts_payable">应付金额</string>
    <string name="select_payment_method">请选择支付方式</string>
    <string name="pay_by_credit_card">信用卡支付</string>
    <string name="offline_payment">线下支付</string>
    <string name="confirm_pay">确认支付</string>
    <string name="avatar">头像</string>
    <string name="name_profile">名字</string>
    <string name="genre">性别</string>
    <string name="age">年龄</string>
    <string name="take_photo">手机拍照</string>
    <string name="choose_photo">选择照片</string>
    <string name="cancel">取消</string>
    <string name="selec_genre">请选择性别</string>
    <string name="selec_age">请选择年龄</string>
    <string name="logout">退出账号</string>
    <string name="buy_now">立即购买</string>
    <string name="selec">选择规格</string>
    <string name="add_cart">加入购物车</string>
    <string name="hint_search">搜索商品名称／类别</string>
    <string name="search_history">历史记录</string>
    <string name="empty">清空</string>
    <string name="popular_searched">热门搜索</string>
    <string name="normal">默认</string>
    <string name="normal1">默认</string>
    <string name="top_seller">销量</string>
    <string name="price">价格</string>
    <string name="old">上架时间</string>
    <string name="verification_code_title">输入验证码</string>
    <string name="resend">重新发送</string>
    <string name="login">登录</string>
    <string name="remark">备注说明：</string>
    <string name="nickname">昵称</string>
    <string name="in_cart">在购物车中</string>
    <string name="order_status">订单状态</string>
    <string name="cancel_order">取消订单</string>
    <string name="order">订单</string>
    <string name="alert">提示</string>
    <string name="selec_from_gallery">从相册选取</string>
    <string name="init">首页</string>
    <string name="news">新增</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="string_default">默认</string>
    <string name="pay_now">立即付款</string>
    <string name="update">升级</string>
    <string name="member_might_descount">会员，可获取返利</string>
    <string name="tip_select_product">请选择需要购买的商品</string>
    <string name="selected">已选:</string>
    <string name="in_stock">(有货)</string>
    <string name="inprove_specification">(请继续完善规格)</string>
    <string name="sold_out">(无货)</string>
    <string name="tip_select_specification_first">请先选择规格属性</string>
    <string name="add_succesfull">添加成功</string>
    <string name="pusblish_successfull">发表成功</string>
    <string name="complete_review">请填写评价</string>
    <string name="can_use_coupons">可使用代金券</string>
    <string name="send">运费</string>
    <string name="select_address_send">请选择收货地址</string>
    <string name="order_branch">订单支付</string>
    <string name="without_coupons">暂无代金券可用</string>
    <string name="evaluation_list">评价列表</string>
    <string name="bank">开户行</string>
    <string name="bank_account">银行账号</string>
    <string name="order_payment">订单支付</string>
    <string name="pending">付款</string>
    <string name="payment_succesfull">支付成功</string>
    <string name="rebaja">返利</string>
    <string name="enter_correct_phone">请输入正确的手机号码</string>
    <string name="privacy">会员注册协议</string>
    <string name="send_to">已向</string>
    <string name="verify_code">发送验证码</string>
    <string name="scond_recover">秒重新获取</string>
    <string name="get_code_verify">获取验证码</string>
    <string name="invalid_verify_code">无效的验证码</string>
    <string name="search_not_empty">搜索内容不能为空</string>
    <string name="balance">余额</string>
    <string name="full">满</string>
    <string name="first_login">请先登录</string>
    <string name="total_simple">共</string>
    <string name="quantity">数量</string>
    <string name="about_us">关于我们</string>
    <string name="history_account">账户历史</string>
    <string name="directions_list">地址列表</string>
    <string name="balance_available">可用余额</string>
    <string name="send_successfull">提交成功</string>
    <string name="change_name">修改姓名</string>
    <string name="edit_address">编辑地址</string>
    <string name="add_address">新增地址</string>
    <string name="edit_successfull">修改成功</string>
    <string name="add_sucessfull">新增成功</string>
    <string name="select_region">请选择地区</string>
    <string name="enter_reciver">请填写收件人</string>
    <string name="complete_address">请填写地址</string>
    <string name="enter_phone">请填写手机号码</string>
    <string name="my_account">我的账户</string>
    <string name="not_current_balance_available">当前无余额可供提现</string>
    <string name="set_title">请输入标题</string>
    <string name="enter_comment">请输入您的反馈意见</string>
    <string name="detail_order">订单详情</string>
    <string name="confirm_check">确认收货</string>
    <string name="comments">评价</string>
    <string name="info_status">物流信息</string>
    <string name="copied">已复制</string>
    <string name="pay_method">支付方式:</string>
    <string name="number_order_pay">支付交易单号:</string>
    <string name="time_order">下单时间:</string>
    <string name="confirm_order">是否确认收货</string>
    <string name="confirm_successfull">确认成功</string>
    <string name="canceled">已取消</string>
    <string name="Logistics">查看物流</string>
    <string name="personal_info">个人资料</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="actual_cache_size">当前缓存大小为</string>
    <string name="ask_sure_clean">确定清除吗</string>
    <string name="cleaned">清除完毕</string>
    <string name="products">件商品 实付款：</string>
    <string name="not_coupons_availables">没有可以使用的优惠券!</string>
    <string name="available">可用</string>
    <string name="list_comments">评论列表</string>
    <string name="without_detail">暂无详情</string>
    <string name="error">错误</string>
    <string name="without_order_rel">没有相关订单哦~</string>
    <string name="pending_pay">待付款</string>
    <string name="all">全部</string>
    <string name="transport">待收货</string>
    <string name="completed">已完成</string>
    <string name="canceled_all">已取消</string>
    <string name="cart_empty">暂无购物车数据</string>
    <string name="not_elements_result">没有需要结算的商品哦~</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_successfull">支付成功</string>
    <string name="personal_inf">个人资料</string>
    <string name="delivery_address">收货地址</string>
    <string name="clear_cache">清除缓存</string>
</resources>
