<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/photo_take_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gray_corner">

        <Button

            android:id="@+id/album_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/selec_from_gallery"
            android:textColor="#FF1F2D3D"
            android:textSize="16sp" />

        <View
            android:id="@+id/album_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/album_bt"
            android:background="#EFEFEF" />

        <Button
            android:id="@+id/take_photo_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/album_divider"
            android:background="@android:color/transparent"
            android:text="@string/take_photo"
            android:textColor="#FF1F2D3D"
            android:textSize="16sp" />


    </RelativeLayout>

    <View
        android:id="@+id/photo_take_divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/photo_take_rl"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo_take_divider"
        android:background="@drawable/shape_gray_corner">

        <Button

            android:id="@+id/cancel_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="#FF1F2D3D"
            android:textSize="16sp" />

    </RelativeLayout>
</RelativeLayout>